--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Name of your site (displayed in the header)
 name: "Y-Chengh's blog"
 # Short bio or description (displayed in the header)
-description: ""
+description: "just write something."
 
 #
 # Flags below are optional
